今日はここまで

--- a/.github/ISSUE_TEMPLATE/--------.md
+++ b/.github/ISSUE_TEMPLATE/--------.md
@@ -1,11 +1,11 @@
 ---
 name: 仕様テンプレート
 about: 仕様の時に使用するテンプレートです
-title: ''
+title: ""
 labels: 仕様
-assignees: ''
-
+assignees: ""
 ---
 
 ### 必要な要素
+
 -
